# Transcricoes-Youtube

./: README.md  project_work_hours.csv  pyproject.toml
.github/workflows/: get_transcriptions.yaml
get_youtube_transcriptions/: youtube.py
transcripts/: 202304080153_o6nVQzyfwqk_create_your_first__jenkins_job_01_3gpp.txt  202304112127_Y1ZKHX0sAfg_get__you_tube__transcriptions__public__github__template_3gpp.txt  202304180001_YiUQJj2Xn6M_not_found.txt  202304180003_YlVjdG6Y9jg_not_found.txt  202304180004_KMXNLu0MM6s_9__m_e_l_h_o_r_e_s__s_i_t_e_s__p_a_r_a__c_r_i_a_r__f_o_t_o__c_o_m__i_n_t_e_l_i_g_e_n_c_i_a__a_r_t_i_f_i_c_i_a_l__d_e__g_r_aÇ_a_3gpp.txt  202305311739_Y1ZKHX0sAfg_not_found.txt
